[package]
name = "tuya_valve_actuator_calibrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9.1"
futures = "0.3.17"
env_logger = "0.9.0"
log = "0.4.14"
async-std = "1.10.0"
serde_json = "1"
serde = { version = "1.0", features = ["derive"]}