[package]
name = "tuya_ts0601_thermostat_calibrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.12.0"
tokio = { version = "1.19.0", features = ["full"] }
rand = "0.8.5"
bytes = "1.1.0"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
serde = { version = "1.0.137", features = ["derive"]}